--- a/views/index.haml
+++ b/views/index.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Title
+    %title Ethereum Wallet Presentation by @makevoid
     %meta{:charset => "utf-8"}/
     :css
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
