--- a/views/index.haml
+++ b/views/index.haml
@@ -39,13 +39,49 @@
         width: 105%; height: 550px; position: relative; top: -35px;
       }
 
+      @page {
+        size: 1210px 681px;
+        margin: 0;
+      }
+
+      @media print {
+        .remark-slide-scaler {
+          width: 100% !important;
+          height: 100% !important;
+          transform: scale(1) !important;
+          top: 0 !important;
+          left: 0 !important;
+        }
+      }
+
+      .remark-slide-number:after {
+        content: "@makevoid";
+        position: absolute;
+        left: -130px;
+        top: 0;
+      }
+
+      img {
+        width: 95%;
+        margin: 0 auto;
+      }
+
+      a {
+        color: #346ff9;
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: #547fff;
+      }
+
       /*   left: -65px; */
 
   %body
     %textarea#source
       :preserve
         #{File.read "./eth-wallet-presentation.md"}
-    %script{:src => "https://gnab.github.io/remark/downloads/remark-latest.min.js"}
+    %script{:src => "/js/vendor/remark.js"}
       :cdata
     :javascript
       var slideshow = remark.create();
