--- a/views/index.haml
+++ b/views/index.haml
@@ -59,6 +59,11 @@
         position: absolute;
         left: -130px;
         top: 0;
+
+        content: "DRAFT // @makevoid";
+        top: -50px;
+        color: #E00;
+        font-weight: bold
       }
 
       img {
