--- a/views/index.haml
+++ b/views/index.haml
@@ -60,10 +60,10 @@
         left: -130px;
         top: 0;
 
-        content: "DRAFT // @makevoid";
+        /* content: "DRAFT // @makevoid";
         top: -50px;
         color: #E00;
-        font-weight: bold
+        font-weight: bold */
       }
 
       img {
